<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".NationalID">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_update"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:popupTheme="@style/AppTheme.PopupOverlay" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Update"
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text11"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="200dp"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/national_id_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/national_id"
            android:inputType="number"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/text11">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_2_update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:background="#99FFFFFF"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/next_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>